small changes :)